[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "haak-anvil"
version = "0.1.0"
description = "Modern, multi-format pentest report generator. Mexican-built, professional-grade."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Alan Contreras", email = "contacto@haak.com.mx" },
]
maintainers = [
    { name = "Haak Cybersecurity Consulting", email = "contacto@haak.com.mx" },
]
keywords = [
    "pentest", "penetration-testing", "report-generator",
    "nmap", "nessus", "burp", "nuclei", "owasp-zap",
    "security", "infosec", "red-team", "mssp", "mexico",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic[email]>=2.6",
    "defusedxml>=0.7.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-slugify>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
docx = ["python-docx>=1.1.0"]
ai = ["anthropic>=0.30.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]
all = ["weasyprint>=62.0", "python-docx>=1.1.0", "anthropic>=0.30.0"]

[project.urls]
Homepage = "https://haak.com.mx"
Repository = "https://github.com/alancontreras-mx/haak-anvil"
Issues = "https://github.com/alancontreras-mx/haak-anvil/issues"
Documentation = "https://github.com/alancontreras-mx/haak-anvil#readme"

[project.scripts]
haak-anvil = "haak_anvil.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/haak_anvil"]

[tool.hatch.build.targets.sdist]
include = [
    "src/haak_anvil",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
